@@ -3,6 +3,8 @@ LIBPOPT_0
   global:
     _fini;
     _init;
+    _poptArgMask;
+    _poptGroupMask;
     poptAddAlias;
     poptAddItem;
     poptAliasOptions;
